# rxresume-mcp

./: .dockerignore  .gitignore  DEVELOPING.md  README.md  docker-compose.yml  printer-example.env  pyproject.toml
.github/workflows/: coverage.yml  docker.yml  lint.yml  publish.yml  tests.yml
docker/: Dockerfile  entrypoint.sh  example.env
examples/: README.md
examples/with-ollmcp/: README.md  servers.json
examples/with-sse/: README.md  docker-compose.yml  mcp.json
examples/with-streamable-http/: README.md  docker-compose.yml  mcp.json
examples/with-systemd/: README.md  rxresume-mcp.env.example  rxresume-mcp.service
examples/with-traefik/: README.md  docker-compose.yml
src/: config.py  rxresume_client.py
src/rxresume_mcp/: __init__.py  config.py  prompts.py  resources.py  rxresume_client.py  server.py
